Fullwidth restrictions for sections, grid fix for projects on mobile

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -24,7 +24,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 20px 80px;
+	padding: 20px max(80px, calc((100% - 1440px) / 2));
 }
 
 .logo {
