--- a/src/sections/Hero/Hero.module.css
+++ b/src/sections/Hero/Hero.module.css
@@ -32,7 +32,7 @@
 	align-items: center;
 
 	justify-content: space-between;
-	padding: 80px 80px 40px;
+	padding: 80px max(80px, calc((100% - 1440px) / 2)) 40px;
 	position: relative;
 	z-index: 2;
 }
