--- a/src/sections/Skills/Skills.module.css
+++ b/src/sections/Skills/Skills.module.css
@@ -1,11 +1,12 @@
 .skills {
 	position: relative;
 	background-color: var(--bg-dark);
-	padding: 80px 120px;
+	padding: 80px max(120px, calc((100% - 1360px) / 2));
 	display: flex;
 	flex-direction: column;
 	gap: 48px;
 	overflow: hidden;
+
 }
 
 .skills::before {
